[package]
name = "generate"
version = "1.0.0"
edition = "2018"

[dependencies]
toml = "0.5.6"
serde = { version = "1.0.110", features = ["derive"] }
anyhow = "1.0.31"
walkdir = "2.3.1"
regex = "1.3.7"
syntect = "4.2.0"
pulldown-cmark = "0.7.1"
serde_json = "1.0.53"
indicatif = "0.14.0"

[[bin]]
name = "generate"
path = "./generate.rs"
